# todolisthafizh

./: CMakeLists.txt  agenda.cpp  agenda.h  main  main.cpp  main2  main2.cpp  text.txt
src/: main  main.cpp  mmain  text.txt
